# XtermBoatSinker

./: .gitmodules  CMakeLists.txt  README.md  bots.md  protocol.md
BotExamples/: README.md
BotExamples/java/: README.md
BotExamples/java/TurkeyBot/: README.md  TurkeyBot.java  TurkeyBotMinimal.java
BotExamples/java/com/zd3nik/: TurkeyBot.java  TurkeyBotMinimal.java
main/: Edgar.cpp  Edgar.h  Hal9000.cpp  Hal9000.h  RandomRufus.cpp  RandomRufus.h  ServerMain.cpp  UserClient.cpp
src/: Board.cpp  Board.h  Boat.h  CMakeLists.txt  CSV.h  CanonicalMode.cpp  CanonicalMode.h  Client.cpp  Client.h  CommandArgs.cpp  CommandArgs.h  Configuration.cpp  Configuration.h  Container.cpp  Container.h  Coordinate.h  DBHandle.h  DBObject.h  DBRecord.cpp  DBRecord.h  Database.h  Edgar.cpp  Edgar.h  FileSysDBRecord.cpp  FileSysDBRecord.h  FileSysDatabase.cpp  FileSysDatabase.h  Game.cpp  Game.h  Hal9000.cpp  Hal9000.h  Input.cpp  Input.h  Jane.cpp  Jane.h  LogStream.h  Logger.cpp  Logger.h  Message.cpp  Message.h  (+37 more)
src/bots/: Edgar.cpp  Edgar.h  Hal9000.cpp  Hal9000.h  Jane.cpp  Jane.h  RandomRufus.cpp  RandomRufus.h  Sal9000.cpp  Sal9000.h  Skipper.cpp  Skipper.h  TargetingComputer.cpp  TargetingComputer.h  WOPR.cpp  WOPR.h
src/db/: DBRecord.cpp  DBRecord.h  Database.h  FileSysDBRecord.cpp  FileSysDBRecord.h  FileSysDatabase.cpp  FileSysDatabase.h
src/main/: ServerMain.cpp  UserClient.cpp
src/xbs/: Board.cpp  Board.h  Bot.cpp  Bot.h  BotRunner.cpp  BotRunner.h  BotTester.cpp  BotTester.h  CMakeLists.txt  CSV.h  CSVReader.cpp  CSVReader.h  CSVWriter.cpp  CSVWriter.h  CanonicalMode.cpp  CanonicalMode.h  Client.cpp  Client.h  CommandArgs.cpp  CommandArgs.h  Configuration.cpp  Configuration.h  Coordinate.h  EfficiencyTester.cpp  EfficiencyTester.h  Error.h  Game.cpp  Game.h  Input.cpp  Input.h  LogStream.h  Logger.cpp  Logger.h  Message.cpp  Message.h  Movement.h  Msg.h  Pipe.cpp  Pipe.h  Placement.cpp  (+27 more)
src/xbs/db/: DBRecord.cpp  DBRecord.h  Database.h  FileSysDBRecord.cpp  FileSysDBRecord.h  FileSysDatabase.cpp  FileSysDatabase.h
